Changelog
=========


1.3.6 (unreleased)
------------------

- Nothing changed yet.


1.3.5 (2017-08-31)
------------------

- Fix a bug, which I introduced in 1.3.3 and miss to catch in 1.3.4 :-( [mathias.leimgruber]


1.3.4 (2017-08-30)
------------------

- Automatically open the search menu for single value fields. [mathias.leimgruber]

- BugFix: Fix JS error on single value fields. [mathias.leimgruber]


1.3.3 (2017-07-31)
------------------

- BugFix: No longer add items if they're not "really" selected.
  [mathias.leimgruber]


1.3.2 (2017-07-11)
------------------

- Removed superfluous `for` attribute for a behavior without a `factory` configured. [phgross]


1.3.1 (2017-06-14)
------------------

- Added french translations.
  [phgross]

- BugFix: Do not use the value as id in the search endpoint.
  [mathias.leimgruber]

- BugFix: Get stored terms by token not by value, since self.value stores the widget value.
  [mathias.leimgruber]


1.3.0 (2017-05-11)
------------------

- Add testbrowser widget for Keywordwidgets with async option.
  [mathias.leimgruber]

- No longer load keywordwidget JS inline in the widget.
  [mathias.leimgruber]

- Implement new async option.
  [mathias.leimgruber]


1.2.0 (2017-04-24)
------------------

- Implement new option to create new terms with unicode values instead of utf-8.
  [mathias.leimgruber]


1.1.4 (2017-03-20)
------------------

- Always hide new entries field.
  [mathias.leimgruber]


1.1.3 (2017-03-09)
------------------

- No longer duplicate keywords with non ascii chars. [deiferni]

- Don't drop user-input when a form including the widget has validation errors. [deiferni]

- Fix an issue if the user only inserts one keyword into the widget.
  [elioschmutz]

- Fix selec2js profile path to select2 resources. [deiferni]


1.1.2 (2017-03-02)
------------------

- Downgrade select2 from 4.0.3 to 4.0.2 to fix an ie11 issue.
  See https://github.com/select2/select2/issues/4525.
  [elioschmutz]
