@@ -5,7 +5,8 @@ Changelog
 1.3.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Only add terms to the new field list if it's really a new selected term.
+  [mathias.leimgruber]
 
 
 1.3.5 (2017-08-31)
